--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,14 @@ dependencies:
   cached_network_image: ^2.0.0-rc
   flutter_vector_icons: ^0.2.1
   shared_preferences: ^0.5.3+4
+  carousel_slider: ^1.4.1
+  flutter_staggered_grid_view: ^0.3.0
   dio: ^2.1.13
   contacts_service: ^0.3.10
   permission_handler: ^3.1.0
   url_launcher: ^5.0.3
   intl: ^0.16.1
+  share: ^0.6.3+6
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,7 @@ flutter:
    - assets/home_banner@3x.png
    - assets/afrishop_logo@3x.png
    - assets/imag1.JPG
+   - assets/avatar04.png
    - assets/imag2.JPG
    - assets/imag3.JPG
    - assets/imag4.JPG
